// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Navigation/MenuLink active 1`] = `
<a
  class="css-1ns2oul"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/MenuLink default 1`] = `
<a
  class="css-1b2u8sb"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/MenuLink with knobs 1`] = `
<div
  class="css-t9df35"
>
  <a
    class="css-1ns2oul"
    href="/"
  >
    Menu link item
  </a>
</div>
`;
